[gd_scene load_steps=6 format=3 uid="uid://wqdoii44hy74"]

[ext_resource type="Script" path="res://user_interface/main_menu.gd" id="1_juh8o"]
[ext_resource type="PackedScene" uid="uid://dkp8dkmqw7be0" path="res://user_interface/editor_tabs.tscn" id="2_hy5r8"]
[ext_resource type="PackedScene" uid="uid://dxqfyx60tnul4" path="res://user_interface/settings.tscn" id="2_o7dya"]

[sub_resource type="LabelSettings" id="LabelSettings_lvf8t"]
font_size = 33

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7s05e"]

[node name="Root" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juh8o")

[node name="GlobalBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="File" type="MenuButton" parent="GlobalBar"]
layout_mode = 2
text = "File"

[node name="Edit" type="MenuButton" parent="GlobalBar"]
layout_mode = 2
text = "Edit"

[node name="Docs" type="MenuButton" parent="GlobalBar"]
layout_mode = 2
text = "Documentation"

[node name="Settings" type="MenuButton" parent="GlobalBar"]
layout_mode = 2
text = "Settings"

[node name="MainSpace" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="OpeningMenu" type="CenterContainer" parent="MainSpace"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Vbox" type="VBoxContainer" parent="MainSpace/OpeningMenu"]
layout_mode = 2

[node name="Welcome" type="Label" parent="MainSpace/OpeningMenu/Vbox"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
tooltip_text = "Welcom
etothen
extlevel"
mouse_filter = 1
text = "Welcome to RetroScribe!"
label_settings = SubResource("LabelSettings_lvf8t")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BlankSpace" type="HSeparator" parent="MainSpace/OpeningMenu/Vbox"]
layout_mode = 2
theme_override_constants/separation = 18
theme_override_styles/separator = SubResource("StyleBoxEmpty_7s05e")

[node name="Open" type="Button" parent="MainSpace/OpeningMenu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Open File"

[node name="Docs" type="Button" parent="MainSpace/OpeningMenu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Browse Documentation"

[node name="Settings" type="Button" parent="MainSpace/OpeningMenu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Open Settings"

[node name="MainEditor" parent="MainSpace" instance=ExtResource("2_hy5r8")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Docs" type="TabContainer" parent="MainSpace"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Settings" parent="MainSpace" instance=ExtResource("2_o7dya")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="OpenAScript" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.txt;RetroScript Script Files")
use_native_dialog = true

[connection signal="pressed" from="MainSpace/OpeningMenu/Vbox/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MainSpace/OpeningMenu/Vbox/Docs" to="." method="_on_docs_pressed"]
[connection signal="pressed" from="MainSpace/OpeningMenu/Vbox/Settings" to="." method="_on_settings_pressed"]
